fix: some API preload error and add endpoint to get active stream by streamerID
