# controllers/stream_controller.go
@@ -132,3 +132,32 @@ func StopActiveStream(c *gin.Context) {
 
 	utils.SuccessResponse(c, http.StatusOK, "update success", resp)
 }
+
+// GetActiveStreamByStreamerID godoc
+// @Summary      Get active stream by streamerID
+// @Description  Get active stream by streamerID
+// @Tags         Stream
+// @Accept       json
+// @Produce      json
+// @Param        streamerID query string true "Streamer ID"
+// @Success      200   {object}  dtos.StreamResponse
+// @Failure      400   {object}  map[string]string
+// @Failure      409   {object}  map[string]string
+// @Failure      500   {object}  map[string]string
+// @Router       /streams/by-streamer-id [get]
+func GetActiveStreamByStreamerIDController(c *gin.Context) {
+	streamerID := c.Query("streamerID")
+
+	if streamerID == "" {
+		utils.FailedResponse(c, http.StatusBadRequest, "invalid request")
+		return
+	}
+
+	resp, err := services.GetActiveStreamByStreamerID(streamerID)
+	if err != nil {
+		utils.FailedResponse(c, http.StatusInternalServerError, "something wrong")
+		return
+	}
+
+	utils.SuccessResponse(c, 200, "success", resp)
+}
